syntax = "proto3";

package gqr;


service QR {
    rpc Generate (Data) returns (Image) {
    };
}

message Data {

    enum Recovery {
        // Level L: 7% error recovery.
        LOW = 0;

        // Level M: 15% error recovery. Good default choice.
        MEDIUM = 1;

        // Level Q: 25% error recovery.
        HIGH = 2;

        // Level H: 30% error recovery.
        HIGHEST = 3;
    }

    Recovery RecoveryLevel = 1;
    int32 size = 2;
    string data = 3;
}

message Image {
    string contentType = 1;
    bytes data = 2;
}
